2008-07-26 shashank singh <shashank_singh@ieee.org>
    *src/plugins/marble
    added twitter plugins and did small modification in panoramio plugin
2008-07-24  Claudiu Covaci  <claudiu.covaci@gmail.com>
	* src/lib/MarbleControlBox.cpp:
	Fix: re-enable zoom buttons if newly selected map supports higher zoom levels.

2008-07-23  Claudiu Covaci  <claudiu.covaci@gmail.com>
	MarbleControlBox patch to fix the item order by subclassing QSortFilterProxyModel.
	* src/lib/MarbleControlBox.{h,cpp}: added MapThemeSortFilterProxyModel instance
	* src/lib/MapThemeSortFilterProxyModel.{h,cpp}: new files

2008-07-20  Inge Wallin  <inge@lysator.liu.se>

	Introduce a read-only facade for internal Marble data.
	* src/lib/CMakeLists.txt: compile new .cpp and install new .h
	* src/lib/MarbleDataFacade.{h,cpp}: new files
	* src/lib/MarbleModel.{h,cpp} (dateTime): New function

	Restore forward compatibility
	* src/lib/MarbleModel.{h,cpp}: Make all members part of the
	private class.

	Reduce warnings: Initialize in the right order.
	* src/lib/geodata/data/GeoDataPlacemark.cpp (GeoDataPlacemarkPrivate),
	* src/lib/geodata/data/GeoDataPolygon.cpp (GeoDataPolygonPrivate),
	* src/lib/geodata/scene/GeoSceneLayer.cpp (GeoSceneLayer): Initialize in the right order.

	Cleanup: Make the d pointer actually be named d.
	* src/lib/geodata/data/GeoDataPolygon.{h,cpp},
	* src/lib/geodata/data/GeoDataGeometry.{h,cpp},
	* src/lib/geodata/data/GeoDataCoordinates.{h,cpp},
	* src/lib/geodata/data/GeoDataHotSpot.{h,cpp}: rename the d pointer.
	
2008-07-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpFetchFile.cpp:

    Clean up last commit:
    - Remove commented out code.
    - Comment out debug output as it was before.

2008-07-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpFetchFile.cpp:
    * src/lib/HttpFetchFile.h:
    * src/lib/HttpDownloadManager.cpp:

    Fix bug 162681 in trunk (slow tile download).
    The problem with the download implementation was that